--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title></title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 		 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		 <link rel="stylesheet" href="css/bootstrap.css">
@@ -13,13 +14,13 @@
 
 		<div class="container">
 		<div class="row text-center">
-		  <div class="col-sm-3">
-		  	<h1>BOOK FINDER</h1>
+		  <div class="col-lg-12">
+		  	<h1 class="animated fadeInDown">BOOK FINDER</h1>
 		  	<!-- user input -->
-		    <input id="search" placeholder="Title or Author" autofocus/>
+		    <input class="animated fadeInUp" id="search" placeholder="Title or Author" autofocus/>
 		    <br><br>
 		    <!-- user submit -->
-			<button id="searchBtn" class="btn btn-primary btn-lg btn-block">SEARCH</button>
+			<button id="searchBtn" class="btn btn-primary">SEARCH</button>
 		  </div>
 		  <div class="col-sm-9">
 		    <!-- display results -->
